--- a/README
+++ b/README
@@ -7,3 +7,11 @@ A learning exercise in
 This read me will be a record of my process
 19/06/2014 - requirement gathering, and problem breakdown
 19/06/2014 - establish git folder
+19/06/2014 - credit learning resources
+
+Resources - http://jqfundamentals.com/ : flags up antipatterns, useful
+http://www.thinkful.com/learn/intro-to-jquery
+http://try.jquery.com/
+http://www.codecademy.com/tracks/jquery
+jQuery Recipes: A Problem-Solution Approach
+jQuery UI 1.7: The User Interface Library for jQuery
