--- a/README
+++ b/README
@@ -37,3 +37,7 @@ http://www.codecademy.com/tracks/jquery
 jQuery Recipes: A Problem-Solution Approach
 jQuery UI 1.7: The User Interface Library for jQuery
 
+Working out specific jQuery - important references
+http://api.jquery.com/parents/
+http://weblogs.asp.net/yousefjadallah/grid-layout-in-jquery-mobile
+
